MDEV-21584 Linux aio returned OS error 22

O_DIRECT requires 512 or 4096 alignment, depending on a platform.
At least ROW_FORMAT=COMPRESSED tables may violate 4096 alignment
requirements.

This patch adds tracking of O_DIRECT fds and disables it when alignment
violating happens. This is the least intrusive solution I was able to
invent.

BTW, redo log is never O_DIRECT, see os_file_create_func().

o_direct_fds: a set of file handles with O_DIRECT enabled

check_o_direct_alignment(): checks and disables O_DIRECT of file handle
when alignment requirements are violated.