storage/innobase/os/os0file.cc
@@ -82,6 +82,34 @@ Created 10/21/1995 Heikki Tuuri
 #include <winioctl.h>
 #endif
 
+#ifdef O_DIRECT
+/** a set of file handles with O_DIRECT enabled */
+std::vector<int> o_direct_fds;
+
+/** actually, this is sometimes 512, but lets use a bigger value to be correct
+always(?) */
+static const size_t O_DIRECT_ALIGNMENT = 4096;
+
+/** disables O_DIRECT on file handle when alignment requirements are violated */
+static void check_o_direct_alignment(os_file_t handle, const void *buf,
+                                     size_t size, size_t offset)
+{
+  if (reinterpret_cast<size_t>(buf) % O_DIRECT_ALIGNMENT == 0 &&
+      size % O_DIRECT_ALIGNMENT == 0 && offset % O_DIRECT_ALIGNMENT == 0)
+  {
+    return;
+  }
+
+  std::vector<int>::iterator it=
+      std::lower_bound(o_direct_fds.begin(), o_direct_fds.end(), handle);
+  if (it != o_direct_fds.end() && *it == handle)
+  {
+    fcntl(handle, F_SETFL, 0);
+    o_direct_fds.erase(it);
+  }
+}
+#endif
+
 /** Insert buffer segment id */
 static const ulint IO_IBUF_SEGMENT = 0;
 
@@ -1610,6 +1638,10 @@ SyncFileIO::execute(const IORequest& request)
 		n_bytes = pread(m_fh, m_buf, m_n, m_offset);
 	} else {
 		ut_ad(request.is_write());
+#ifdef O_DIRECT
+		check_o_direct_alignment(m_fh, m_buf, static_cast<size_t>(m_n),
+					 static_cast<size_t>(m_offset));
+#endif
 		n_bytes = pwrite(m_fh, m_buf, m_n, m_offset);
 	}
 
@@ -1798,8 +1830,11 @@ LinuxAIOHandler::resubmit(Slot* slot)
 
 	iocb->data = slot;
 
-	ut_a(reinterpret_cast<size_t>(iocb->u.c.buf) % OS_FILE_LOG_BLOCK_SIZE
-	     == 0);
+#ifdef O_DIRECT
+	check_o_direct_alignment(slot->file, iocb->u.c.buf,
+				 reinterpret_cast<size_t>(iocb->u.c.nbytes),
+				 static_cast<size_t>(iocb->u.c.offset));
+#endif
 
 	/* Resubmit an I/O request */
 	int	ret = io_submit(m_array->io_ctx(m_segment), 1, &iocb);
@@ -2169,8 +2204,11 @@ AIO::linux_dispatch(Slot* slot)
 
 	io_ctx_index = (slot->pos * m_n_segments) / m_slots.size();
 
-	ut_a(reinterpret_cast<size_t>(iocb->u.c.buf) % OS_FILE_LOG_BLOCK_SIZE
-	     == 0);
+#ifdef O_DIRECT
+	check_o_direct_alignment(slot->file, iocb->u.c.buf,
+				 reinterpret_cast<size_t>(iocb->u.c.nbytes),
+				 static_cast<size_t>(iocb->u.c.offset));
+#endif
 
 	int	ret = io_submit(io_ctx(io_ctx_index), 1, &iocb);
 	ut_a(ret != -EINVAL);
@@ -2364,8 +2402,6 @@ AIO::is_linux_native_aio_supported()
 		io_prep_pread(p_iocb, fd, ptr, 512, 0);
 	}
 
-	ut_a(reinterpret_cast<size_t>(p_iocb->u.c.buf) % OS_FILE_LOG_BLOCK_SIZE
-	     == 0);
 	int	err = io_submit(io_ctx, 1, &p_iocb);
 	ut_a(err != -EINVAL);
 
@@ -5352,7 +5388,7 @@ os_file_set_nocache(
 					<< "Failed to set O_DIRECT on file"
 					<< file_name << ";" << operation_name
 					<< ": " << strerror(errno_save) << ", "
-					<< "ccontinuing anyway. O_DIRECT is "
+					<< "continuing anyway. O_DIRECT is "
 					"known to result in 'Invalid argument' "
 					"on Linux on tmpfs, "
 					"see MySQL Bug#26662.";
@@ -5370,6 +5406,10 @@ short_warning:
 				<< " : " << strerror(errno_save)
 				<< " continuing anyway.";
 		}
+	} else {
+		o_direct_fds.insert(std::lower_bound(o_direct_fds.begin(),
+						     o_direct_fds.end(), fd),
+				    fd);
 	}
 #endif /* defined(UNIV_SOLARIS) && defined(DIRECTIO_ON) */
 }
@@ -6285,10 +6325,6 @@ AIO::reserve_slot(
 	os_offset_t		offset,
 	ulint			len)
 {
-	ut_ad(reinterpret_cast<size_t>(buf) % OS_FILE_LOG_BLOCK_SIZE == 0);
-	ut_ad(offset % OS_FILE_LOG_BLOCK_SIZE == 0);
-	ut_ad(len % OS_FILE_LOG_BLOCK_SIZE == 0);
-
 #ifdef WIN_ASYNC_IO
 	ut_a((len & 0xFFFFFFFFUL) == len);
 #endif /* WIN_ASYNC_IO */
@@ -6752,8 +6788,6 @@ os_aio_func(
 #endif /* WIN_ASYNC_IO */
 
 	ut_ad(n > 0);
-	ut_ad((n % OS_FILE_LOG_BLOCK_SIZE) == 0);
-	ut_ad((offset % OS_FILE_LOG_BLOCK_SIZE) == 0);
 	ut_ad(os_aio_validate_skip());
 
 #ifdef WIN_ASYNC_IO
